# hri_sl_ros2

./: .gitignore  README.md  landmarks.csv  launch_all.sh  launch_gui.sh  launch_hri.sh  position_trajectories.csv  requirements.txt
src/: README.md
src/rh8d_controller_python/: package.xml  setup.cfg  setup.py
src/rh8d_controller_python/launch/: controller_gui.launch.py  position_controller.launch.py  position_sample_controller.launch.py
src/rh8d_controller_python/rh8d_controller_python/: controller_gui.py  position_controller.py  position_controller_action.py  position_sample_controller.py  test.py
src/rh8d_hw/: package.xml  setup.cfg  setup.py
src/rh8d_hw/config/: RH8D_L.yaml  RH8D_R.yaml  RH8D_tactile_L.yaml  RH8D_tactile_R.yaml  sensors_left.yaml  sensors_right.yaml
src/rh8d_hw/launch/: hw_without_tactile.launch.py  rh8d_hw_combined.launch.py  sensors.launch.py
src/rh8d_hw/rh8d_hw/: rh8d_hand_node.py  rh8d_tactile_combined_node.py  sensor_reading_publishing_node.py
src/rh8d_msgs/: CMakeLists.txt  package.xml
src/rh8d_msgs/action/: CustomAction.action
src/rh8d_msgs/msg/: AllJoints.msg  AllMainBoards.msg  AllSensors.msg  JointListSetSpeedPos.msg  JointListSetStiffness.msg  JointsSensorsCombined.msg  SensorUserCommand.msg
src/rh8d_msgs/srv/: CustomService.srv
src/rh8d_ros2/: package.xml  setup.cfg  setup.py
src/rh8d_ros2/launch/: rh8d_col.launch.py
src/rh8d_ros2/rh8d_ros2/: rh8d_collector.py
src/ros_chat_agent/: package.xml  setup.cfg  setup.py
src/ros_sign_language_recognition/: package.xml  setup.cfg  setup.py
(+12 files in other folders)
